<resources>
    <string name="app_name">Moran</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_inconsistent_password">This password is inconsistent</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_email">邮箱:</string>
    <string name="login_password">密码:</string>
    <string name="register">注册新账号</string>
    <string name="title_activity_register">注册</string>
    <string name="username">用户名</string>
    <string name="repeatPassword">重复密码</string>
    <string name="login">登陆账号</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_to_login">登陆账号</string>
    <string name="change_nickname">更改昵称</string>
    <string name="headimage">设置头像</string>
    <string name="signout">注销登录</string>
    <string name="follow">关注我们</string>
    <string name="rate">评价我们</string>
    <string name="exit">退出程序</string>
</resources>
