<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="login"
    android:id="@+id/login_form"
    tools:context="co.fddd.www.moran.fragment.LoginFragment">

    <!--<ScrollView android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" android:orientation="vertical">-->

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top|center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login_email"/>

            <EditText android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="36dp"
                android:background="@drawable/login_input"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login_password"/>

            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:imeActionId="@+id/email_sign_in_button"
                android:background="@drawable/login_input"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="36dp"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textColor="#ffffff"
                android:background="@drawable/button"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:id="@+id/to_register"
                android:clickable="true"
                android:text="@string/register"/>
        </LinearLayout>
        <!--</LinearLayout>-->
    <!--</ScrollView>-->
</ScrollView>
