<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="co.fddd.www.moran.fragment.MyFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:background="@drawable/my_background">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/my_background"
                android:src="@mipmap/my_head"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/my_background"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:text="xiewenya"
                android:id="@+id/my_nickname"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/my_nickname"
                android:text="xuewenyao@hotmail.com"
                android:textSize="8sp"
                android:id="@+id/my_email"/>
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:background="@color/background"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/border_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center"
                    android:src="@drawable/my_rate"
                    android:layout_marginLeft="14dp"
                    />

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/my_border"
                    android:textSize="12sp"
                    android:textColor="@color/font_color"
                    android:text="@string/rate"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/my_follow"
                    android:layout_gravity="center"
                    android:layout_marginLeft="14dp"
                    />
                <TextView
                    android:id="@+id/follow"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/my_border"
                    android:textSize="12sp"
                    android:textColor="@color/font_color"
                    android:text="@string/follow"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@drawable/sign_logo"
                    android:layout_gravity="center"
                    android:layout_marginLeft="14dp"
                    />
                <TextView
                    android:id="@+id/my_signout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/my_border"
                    android:textSize="12sp"
                    android:textColor="@color/font_color"
                    android:text="@string/signout"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_color"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/background"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/border_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:src="@drawable/my_nickname"
                        android:layout_marginLeft="14dp"
                        />

                    <TextView
                        android:id="@+id/change_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/my_border"
                        android:textSize="12sp"
                        android:textColor="@color/font_color"
                        android:text="@string/change_nickname"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/my_image_icon"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/my_headimage"
                        android:layout_gravity="center"
                        android:layout_marginLeft="14dp"
                        />
                    <TextView
                        android:id="@+id/my_image"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/my_border"
                        android:textSize="12sp"
                        android:textColor="@color/font_color"
                        android:text="@string/headimage"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:src="@drawable/my_home"
                        android:layout_gravity="center"
                        android:layout_marginLeft="14dp"
                        />
                    <TextView
                        android:id="@+id/exit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/my_border"
                        android:textSize="12sp"
                        android:textColor="@color/font_color"
                        android:text="@string/exit"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
